# atlassian-mcp-server

./: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/: copilot-instructions.md
documentation/: dependencies.md  environment-variables.md  implementation.md  installatiion.md  installation.md  tests.md  tools.md
scripts/: smoke_test.py  smoke_tools.py
src/atlassian_mcp_server/: __init__.py  client.py  config.py  server.py
src/atlassian_mcp_server/tools/: confluence.py  core.py  jira.py
tests/: test_config.py  test_placeholder_values_validation.py  test_schema_compatibility.py  test_template_routing_guard.py
